[gd_scene load_steps=7 format=3 uid="uid://2heump0abwv5"]

[ext_resource type="Script" uid="uid://bkdhrx6w385ky" path="res://scripts/InteractableArea.gd" id="1_yan6s"]
[ext_resource type="FontFile" uid="uid://buwy42dx6d2lq" path="res://fonts/Minecraft.ttf" id="2_4msea"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j4aoe"]
radius = 28.071337

[sub_resource type="Animation" id="Animation_h1gsm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_d3xhb"]
resource_name = "float"
length = 7.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.3, 6.9666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6.745), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5666666, 7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.4333334, 7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.01745329251994329, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_66tf5"]
_data = {
&"RESET": SubResource("Animation_h1gsm"),
&"float": SubResource("Animation_d3xhb")
}

[node name="InteractableArea" type="Area2D" node_paths=PackedStringArray("input_prompt", "prompt_animator")]
script = ExtResource("1_yan6s")
input_prompt = NodePath("Node2D/Label")
prompt_animator = NodePath("AnimationPlayer")

[node name="InteractionRange" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_j4aoe")

[node name="Node2D" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Node2D"]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.5
offset_top = -25.14
offset_right = 69.5
offset_bottom = -9.139999
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(69.5, 7.5)
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_4msea")
theme_override_font_sizes/font_size = 16
text = "[F] TO INTERACT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_66tf5")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
